# Inspire_Hand_SDK

./: .gitignore  README.md  TODO.md  install_dependencies.sh
.cursor/rules/: rule1.mdc
docs/: EG5CD1_ROS2_API.md  RH56DFX_Serial_CAN协议解析.md  RH56F1_485协议格式说明.md  RH5DG2_485协议格式说明.md  依赖清单.md  因时机器人电动夹爪--用户手册V1.0cn.doc  夹爪485寄存器规则.md  模块使用说明.md  项目架构说明.md
src/driver/: CMakeLists.txt  package.xml
src/driver/config/: device_protocol_config.yaml  device_protocol_config_rh5dg2.yaml  device_protocol_rh56dfx_example.yaml  ros2_controller_config.yaml  ros2_controller_config_rh5dg2.yaml  ros2_controller_eg5cd1_example.yaml  ros2_controller_rh56dfx_example.yaml
src/driver/include/: EG5CD1_interface_adapter.hpp  RH56DFX_interface_adapter.hpp  RH56F1_interface_adapter.hpp  RH5DG2_interface_adapter.hpp  device_interface_types.hpp  inspire_controller_factory.hpp  interface_adapter.hpp  message_types.hpp  register_controller.hpp  register_io_backend.hpp
src/driver/launch/: inspire_control_multi_device.launch.py  inspire_control_single_device.launch.py
src/driver/src/: EG5CD1_interface_adapter.cpp  RH56DFX_interface_adapter.cpp  RH56F1_interface_adapter.cpp  RH5DG2_interface_adapter.cpp  inspire_control_node.cpp  inspire_controller_factory.cpp  interface_adapter_factory.cpp  register_controller.cpp
src/inspire_serial_core/: CMakeLists.txt  package.xml
src/inspire_serial_core/cmake/: inspire_serial_coreConfig.cmake.in
src/inspire_serial_core/config/: RH56F1.yaml  RH5DG2.yaml  device_protocol_config.yaml  device_protocol_eg5cd1_example.yaml
src/inspire_serial_core/examples/: RH56DFX.cpp  RH56F1.cpp  RH5DG2.cpp  main.cpp
src/inspire_serial_core/include/: EG5CD1_485_protocol.hpp  RH56DFX_serial_can_protocol.hpp  RH56F1_485_protocol.hpp  RH56F1_canfd_protocol.hpp  RH5DG2_485_protocol.hpp  RH5DG2_canfd_protocol.hpp  config_loader.hpp  device_manager.hpp  device_worker.hpp  io_error.hpp  logger_manager.hpp  protocol.hpp  protocol_factory.hpp  ring_buffer.hpp  serial_port.hpp
src/inspire_serial_core/src/: EG5CD1_485_protocol.cpp  RH56DFX_serial_can_protocol.cpp  RH56F1_485_protocol.cpp  RH56F1_canfd_protocol.cpp  RH5DG2_485_protocol.cpp  RH5DG2_canfd_protocol.cpp  config_loader.cpp  device_manager.cpp  logger_manager.cpp  protocol_factory.cpp  ring_buffer.cpp  serial_port.cpp
src/inspire_serial_core/tests/: CMakeLists.txt  test_device_worker.cpp  test_eg5cd1_485_protocol.cpp  test_helpers.hpp  test_main.cpp  test_rh56f1_485_protocol.cpp  test_rh5dg2_485_protocol.cpp  test_ring_buffer.cpp
src/interfaces/EG5CD1/: CMakeLists.txt  package.xml
src/interfaces/EG5CD1/msg/: GripperState.msg  SetInt32.msg
src/interfaces/EG5CD1/srv/: ForceModeGrasp.srv  ForceModeOpen.srv  GetScalarForHand.srv  SetInt32Value.srv  TouchModeGrasp.srv  TouchModeOpen.srv  TriggerForHand.srv
src/interfaces/RH56DFX/: CMakeLists.txt  package.xml
src/interfaces/RH56DFX/msg/: GetAngleAct1.msg  SetAngle1.msg
src/interfaces/RH56DFX/srv/: Geterror.srv  Setactionseqindex.srv  Setangle.srv  Setbaudrate.srv  Setclearerror.srv  Setdefaultforceset.srv  Setid.srv  Setsave.srv
src/interfaces/RH56F1/: CMakeLists.txt  package.xml
src/interfaces/RH56F1/msg/: GetForceAct1.msg  SetCurrent1.msg  TouchData1.msg
src/interfaces/RH56F1/srv/: Setclearerror.srv  Setid.srv  Setmode.srv  Setresetpara.srv
src/interfaces/RH5DG2/: CMakeLists.txt  package.xml
src/interfaces/RH5DG2/msg/: GetAngleAct1.msg  GetCurrentAct1.msg  SetAngle1.msg  SetCurrent1.msg  SetForce1.msg  SetSpeed1.msg  TouchData1.msg
src/interfaces/RH5DG2/srv/: Getspeedset.srv  Setbaudrate.srv  Setdefaultspeed.srv  Setgestureforceclb.srv  Setgestureno.srv  Setid.srv  Setmode.srv  Setpause.srv  Setpos.srv  Setstop.srv
