<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inspire_serial_core</name>
  <version>1.0.0</version>
  <description>
    Inspire 灵巧手 / 夹爪串口通信核心库（协议抽象、串口、配置、日志）。
    纯 CMake 包，可独立于 ROS 构建，也可被 ROS2 驱动包通过 find_package 复用。
  </description>
  <maintainer email="dev@example.com">inspire</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>yaml-cpp</depend>
  <depend>spdlog</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
